# signifide

./: Cargo.toml  README.md
src/: lib.rs
src/core/: mod.rs  signer.rs
src/crypto/: sign.rs
